# tump-cpp

./: CMakeLists.txt  README.md  github.run-test.setting.json  go.mod  main.go
.github/workflows/: run-test.yml
assets/css/: style.css
docs/: index.html  ref.html
docs/layout/: _breadcrumbs.html  _footer.html  _header.html  _sidebar.html
docs/ref/: container.html  expression.html  invocable.html  macro.html  metafunction.html  operator.html
docs/ref/container/: bintree.html  btree.html  list.html  vlist.html
docs/ref/expression/: exp.html  guard.html  lambda.html  mp_if.html  sec.html
docs/ref/invocable/: apply.html  callback.html  compose.html  flip.html  invocable.html  invoke.html  invoke_list.html  partial_apply.html
docs/ref/metafunction/: add_optional.html  block_if.html  comparing_type.html  left.html  remove_optional.html  right.html  std.html  through_if.html  to_true.html  vwrap.html
docs/ref/operator/: apply.html  compare.html  concat.html  dot.html  elem.html  logical.html  op.html
include/: tump.hpp
include/tump/: algorithm.hpp  containers.hpp  empty.hpp  expression.hpp  list.hpp  metafunction.hpp  metatype.hpp  null.hpp  type_value.hpp  version.hpp  vwrap.hpp
include/tump/algorithm/: add_optional.hpp  compare.hpp  concat.hpp  copy.hpp  count_if.hpp  exists.hpp  fill.hpp  filter.hpp  find_if.hpp  fold.hpp  get.hpp  guard.hpp  has_type_parameters.hpp  index_of.hpp  left_right.hpp  len.hpp  make_type_list.hpp  map.hpp  mp_if.hpp  mp_max_min.hpp  pop.hpp  push.hpp  remove_if.hpp  replace_if.hpp  reverse.hpp  slice.hpp  sort.hpp  through_if.hpp  to_true.hpp  unique.hpp  zip.hpp
pages/: index.md  ref.md
pages/layout/: _footer.md  _header.md  _sidebar.md
pages/ref/: container.md  expression.md  invocable.md  macro.md  metafunction.md  operator.md
templates/: index.html
test/: CMakeLists.txt  algorithm_test.cpp  containers_test.cpp  expression_test.cpp  metafunction_test.cpp
(+170 files in other folders)
